--- a/release-notes.txt
+++ b/release-notes.txt
@@ -1,3 +1,8 @@
+0.3.2:
+-Bandwidth help : click on the files size to get the number in bit vs bytes and over certain bandwidth periods
+-Summary table : click on the total size to get a summary of the "sizing"
+-Input validation GB: validate if numbers are being used for GB. Also allows you to specify <x>TB or <x>pb. For example, if you give 10tb as input, it will be transformed to 102400GB
+
 0.3.1 :
 -Added space growth
 -Updated GUI for easier input
